# img_descriptor

./: README.md  pyproject.toml
img_descriptor/: main.py
